--- a/buzz_lc.Rmd
+++ b/buzz_lc.Rmd
@@ -32,13 +32,14 @@ pacman::p_load(
   sunburstR,
   d3r,
   streamgraph,
-  sparkline
+  sparkline,
+  googlesheets4
   )
 ```
 
 ```{r Load Data, echo=FALSE, warning=FALSE, message=FALSE}
 ## load json file
-buzz_raw <- data.table(fromJSON("~/GitHub/kjmagnan1s.github.io/Buzz_ThatsMyBiS/buzz_character-json.json", flatten = TRUE))
+buzz_raw <- data.table(fromJSON("~/GitHub/kjmagnan1s.github.io/Buzz_ThatsMyBiS/buzz_character-json.json", flatten = TRUE)) %>% filter(!(name == "Evanpri" | name == "Niempo"))
 
 ## load iter/patterns from P6
 tier6_itemID <- read_csv("phase6_itemIDs.csv")
@@ -144,6 +145,7 @@ buzz_master_received %>%
 ## A box and whisker interactive viz for loot for each class with different specs colored/symbols is a good one
   
 buzz_master_received %>% 
+  filter(!(Name == "Evanpri" | Name == "Niempo")) %>% 
   select(Name, Class, Role, Spec, `Item Name`, Boss, `Item Slot`, `Offspec (Y/N)`, ` `, `Date Received`, Phase) %>% 
   mutate(across(c(Name, Class, Role, Spec, `Item Slot`, `Offspec (Y/N)`, Phase), factor)) %>% 
   mutate(`Date Received` = as_date(`Date Received`)) %>% 
@@ -218,6 +220,12 @@ buzz_wishlist_table %>%
                            list(list(10, 'desc')),
                         buttons = c('copy', 'csv', 'excel')),
           caption = "Export of Giant JSON blob on ThatsMyBiS. All BUZZ guilds characters with their wish lists for Phase 3.")
+
+wishlist_lookup <- buzz_wishlist_table %>% 
+            select(Name, `Item Name`, Boss, `Item Slot`, `Instance Name`) %>% 
+  arrange(`Item Name`)
+
+write_sheet(wishlist_lookup, ss = "19Zvy7pin_RMn9EyK7I4Mjdo5mCbKfOPry0KxTeJmE28", sheet = "wishlist_lookup")
 ```
 
 ## Buzz wishlists aggregated 
@@ -225,6 +233,7 @@ buzz_wishlist_table %>%
 ## add epic pattern drops later and join in
 
 wishlist_aggregated <- buzz_wishlist_table %>%
+            filter(!(Name == "Evanpri" | Name == "Niempo"))%>% 
             select(!c(`Item Slot`)) %>% 
             filter(`Received (Y/N)` == "N") %>% 
             left_join((loot_slot_details %>% select(item_name, `Item Slot` = Slot, )), by = (c("Item Name" = "item_name"))) %>%
