--- a/buzz_lc.Rmd
+++ b/buzz_lc.Rmd
@@ -80,7 +80,8 @@ buzz_master_received <- left_join(buzz_master, buzz_received, by = "id") %>%
   # format date received column for proper filtering in table and remove time
   mutate(Phase = case_when(
     date_received <= "2022-01-26 00:00:'00" ~ "Phase 2",
-    date_received >= "2022-01-30 00:00:00" ~ "Phase 3")) %>% 
+    date_received >= "2022-01-30 00:00:00" & date_received < "2022-05-16 00:00:00" ~ "Phase 3",
+    date_received >= "2022-05-16 00:00:00" ~ "Phase 4")) %>% 
   # logical for grouping loot into TBC phased releases 
   mutate(offspec_yn = ifelse(offspec_yn == 1, "Y", "N")) %>%
   # recode received column to Y/N
